# bpc-prp-drochecmara

./: CMakeLists.txt  README.md  package.xml
include/: RosExampleClass.h  helper.hpp
include/algorithms/: aruco_detector.hpp  kinematics.hpp  pid.hpp  planar_imu_integrator.hpp
include/loops/: corridor_bang.hpp  corridor_nav.hpp  line_loop_bang.hpp  line_loop_pid.hpp
include/nodes/: camera_node.hpp  gamepad_node.hpp  imu_node.hpp  io_node.hpp  kinematics.hpp  lidar_node.hpp  line.hpp  motor.hpp
src/: main.cpp
src/algorithms/: kinematics.cpp  pid.cpp
src/loops/: corridor_bang.cpp  corridor_nav.cpp  line_loop_bang.cpp  line_loop_pid.cpp
src/nodes/: camera_node.cpp  gamepad_node.cpp  imu_node.cpp  io_node.cpp  kinematics.cpp  lidar_node.cpp  line.cpp  motor.cpp
tests/: CMakeLists.txt  pid_test.cpp  t_kinematics.cpp  t_line.cpp
